# CyberDef

./: .env  .env.example  GEOIP_OPTIMIZATION.md  QUICKSTART.md  bug_results.txt  main.py  preservation_results.txt  pyproject.toml  requirements-prod.txt  requirements.txt  setup.sh
agents/: __init__.py  base.py  behavioral_agent.py  cache.py  intent_agent.py  mitre_agent.py  orchestrator.py  outputs_storage.py  triage_agent.py
behavior_summary/: __init__.py  extended_analysis.py  helpers.py  service.py
case_api/: __init__.py  routes.py
chunking/: __init__.py  multi_index.py  service.py  strategies.py
core/: __init__.py  auth.py  auth_routes.py  config.py  exceptions.py  logging.py
data/: aegisnet.db  testit.csv
database/: __init__.py  models.py  repository.py  session.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GEOIP_SETUP.md  HOW_IT_WORKS.md  POSTGRESQL_SETUP.md
enrichment/: __init__.py  geoip_service.py
file_intake/: __init__.py  routes.py  service.py  validator.py
file_watcher/: __init__.py  handler.py
incidents/: __init__.py  service.py
log_parser/: __init__.py  base.py  enhanced_parser.py  firewall_parser.py  generic_parser.py  network_log_parser.py  syslog_parser.py
mitre/: __init__.py  mapper.py  tactics.py
normalization/: __init__.py  service.py
raw_storage/: __init__.py  service.py
reports/: 20260322_185038_8f002041-5ed0-4086-9625-68393ccc0ba3_logevent1_report.md  20260322_185903_8f002041-5ed0-4086-9625-68393ccc0ba3_logevent1_report.md  20260323_081403_838e3b02-3ab8-419e-b661-c4fdad6fd933_logevent1_report.md  __init__.py  writer.py  (+7 more)
(+68 files in other folders)
