[project]
name = "aegisnet"
version = "0.1.0"
description = "AI-Based Network Threat Analysis Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AegisNet Team"}
]

dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Schema Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # AI / LLM
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "ollama>=0.1.6",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    
    # Async
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

vector = [
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
